[package]
name = "enkanetwork-rs"
version = "0.0.1"
license = "MIT/Apache-2.0"
authors = ["eratou"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async-io","text","vector-icon"]
text = ["imageproc","rusttype","woff2","rust-woff"]
vector-icon = ["zip","usvg","resvg"]
async-io = []

[dependencies]
futures = "0.3"
async-std = "1.12"
tokio = { version = "1.23", features = ["rt"]}
reqwest = { version = "0.11", default-features = false , features = ["gzip"] }
urlencoding="^2.1.2"
serde_json = "^1.0.89"
serde = "^1.0.100"
filetime = "0.2"
image = { version = "0.24", default-features = false , features = ["png"]}

imageproc = { version = "0.23.0", optional = true }
rusttype = { version = "0.9.3", optional = true }
woff2 = { version = "0.3.0", optional = true }
rust-woff = { git="https://github.com/eratou/rust-woff" , optional = true}

zip = { version = "0.6.3", default-features = false  , features = ["deflate"], optional = true}
usvg = { version = "0.28.0", optional = true}
resvg = { version = "0.28.0", optional = true}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "*", features = ["rt-multi-thread"]}
reqwest = { version = "*", default-features = false , features = ["rustls-tls-native-roots"] }

[dev-dependencies]
chrono = "^0.4.23"
image = { version = "0.24", default-features = false , features = ["png","jpeg"]}

[[example]]
name = "profile"
required-features = ["text","vector-icon"]

[[example]]
name = "progress"
required-features = ["text","vector-icon"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
